--- a/api-rate-limiter/src/main/resources/application.properties
+++ b/api-rate-limiter/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.redis.host=redis
-spring.redis.port=${REDIS_PORT}
+spring.redis.port=9999
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
