--- a/api-rate-limiter/src/main/resources/application.properties
+++ b/api-rate-limiter/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.redis.host=redis
-spring.redis.port=9999
+spring.data.redis.host=redis
+spring.data.redis.port=6379
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
